kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: storeweb
  labels:
    app.kubernetes.io/name: storeweb
    app.kubernetes.io/managed-by: kubectl
