kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: storeweb-backend
  namespace: storeweb
  labels:
    app: storeweb-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: storeweb-backend
