kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: storeweb-frontend
  namespace: storeweb
  labels:
    app: storeweb-frontend
spec:
  type: ClusterIP
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      name: http
  selector:
    app: storeweb-frontend
